Including some more examples based on popular websites, with this dicovered a memory leak in the plugin, solved with a custom remove event now all test should pass

--- a/examples/stylesheets/examples.css
+++ b/examples/stylesheets/examples.css
@@ -1,4 +1,5 @@
 div#container {margin: 0 auto; padding: 20px; width: 800px;}
+h3{clear: both;}
 
 div#clock { color: white; margin: 20px auto; width: 600px; overflow: hidden; text-align: center; }
 div#clock p { background: #333; float: left; height: 88px; width: 88px; }
@@ -6,5 +7,7 @@ div#clock p span { display: block; font-size: 50px; font-weight: bold; padding: 
 div#clock div.space { color: #ccc; display: block; line-height: 1.7em; font-size: 50px; float: left; height: 88px; width: 30px; }
 
 div.coupon{ color: #333 !important; font-size: 50px; font-weight: bold; }
+
+div.multi_clock{ border: 1px solid #666; color: #333; float: left; margin: 10px; padding: 5px; }
 
 pre{background-color: #eee; border: 1px solid #ccc; line-height: 1.4em; padding: 10px; margin: 0;}
